maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: expected class or object definition
def ouAvance():Int ={ 
^Escaper:50: error: Unmatched closing brace '}' ignored here
}
^