maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var somAng:Int=0
    
  	ouAvance() match{
    	case 0 => avance();somAng+=1
    	case 1 => avance()
    	case 2 => avance();somAng-=1
    	case 3 => droite();avance()
      case 4 => avance()
      case 5 => droite()
  	}
	}
  
  prendBiscuit
}


def ouAvance():Int ={ 
  if (somANg == 0){
    if (getDirection()==Direction.NORD && estFaceMur==false){return 4}
    if (getDirection()==Direction.NORD && estFaceMur==true){return 5}  
      gauche()
  	if (estFaceMur==false){ return 0 }
  	else{
    	droite()
    	if(estFaceMur==false){ return 1 }
    	else {
      	droite()
     	 if (estFaceMur==false){ return 2 }
      	else{return 3}
    	}
 		}
  }
  else {
    gauche()
    if (estFaceMur==false){ return 0 }
    else{
      droite()
      if(estFaceMur==false){ return 1 }
      else {
        droite()
        if (estFaceMur==false){ return 2 }
        else{return 3}
      }
    }
	}  
}